force-app/main/default/objects/Campaign_Products__c/Campaign_Products__c.object-meta.xml
<CustomObject>
    <label>Campaign Products</label>
    <nameField>
        <displayFormat>CP-{0000000}</displayFormat>
        <label>Campaign Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>