force-app/main/default/objects/Campaign_Products__c/fields/Campaign_Price__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Price__c</fullName>
    <label>Campaign Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>