force-app/main/default/objects/Campaign_Products__c/fields/Sales_Price_Depreciated__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_Depreciated__c</fullName>
    <label>Sales Price Depreciated</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>