force-app/main/default/objects/Campaign_Products__c/fields/Total_Campaign_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Campaign_Price__c</fullName>
    <formula>Campaign_Price__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Campaign Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>